tests/compile_fail/filters_nonexistent_field.stderr
error[E0277]: the trait bound `Product: HasField<Weight>` is not satisfied
  --> tests/compile_fail/filters_nonexistent_field.rs:25:13
   |
25 |     builder.eq::<Weight, _>(10.5);
   |             ^^ the trait `HasField<Weight>` is not implemented for `Product`
   |
   = help: the following other types implement trait `HasField<F>`:
             `Product` implements `HasField<Name>`
             `Product` implements `HasField<Price>`
